Adding bios with skill lists and tweaked GRJ case study

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -46,15 +46,52 @@
       </div>
       <div class="row">
         <div class="column">
-          <img src="./images/garrett.png" style=" width: 100%; height: auto;" />
-          <h3>Garrett Kinder - Owner</h3>
-          <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
-            and frameworks like Vue.</p>
+          <img src="./images/paul.jpg" style=" width: 100%; height: auto;" />
+          <h3>Paul Brzeski</h3>
+          <p>Introducing Paul, a versatile and forward-thinking problem solver with over 15 years in the industry. Beyond the traditional boundaries of coding, Paul has embraced a multifaceted style that seamlessly blends technology and creativity to craft innovative solutions.</p>
+          <p>With a natural ability to envision the intersection of art and technology, Paul's journey has been characterized by staying at the forefront of the ever-changing tech landscape and pushing the boundaries of what's possible. He seamlessly adapts to different environments, bringing a perfect blend of technical expertise and creative flair to each project.</p>
+          <h4>Skills</h4>
+          <ul>
+            <li>3D Modelling and Realtime Programming</li>
+            <li>Character design</li>           
+            <li>Generative A.I.</li>
+            <li>Software development</li>
+            <li>Solution architecture</li>
+            <li>Technical consulting</li>
+            <li>UI/UX design</li>
+            <li>Web development</li>
+          </ul>
+          <h4>Tools</h4>
+          <ul>
+            <li>Affinity Designer</li>
+            <li>Affinity Photo</li>
+            <li>Blender</li>
+            <li>Linux. Lots of Linux.</li>
+            <li>Stable Diffusion</li>
+            <li>VSCode</li>
+          </ul>
         </div>
         <div class="column">
-          <img src="./images/paul.jpg" style=" width: 100%; height: auto;" />
-          <h3>Paul Brzeski - Owner</h3>
-          <p>A self taught technical and creative professional enjoying over 15 years in the industry.</p>
+          <img src="./images/garrett.png" style=" width: 100%; height: auto;" />
+          <h3>Garrett Kinder</h3>
+          <p>Meet Garrett, the embodiment of sophistication and innovation, renowned as an award-winning bartender, expert jeweler, and connoisseur of rare whiskies.</p>
+          <p>Embracing the digital realm, Garrett shares his passion and expertise as a taste visionary, enriching the online world with his profound knowledge of aesthetics and all things refined.</p>
+          <h4>Skills</h4>
+          <ul>
+            <li>3D Modelling and Renders</li>
+            <li>Creative consulting</li>
+            <li>Generative A.I.</li>
+            <li>Graphic design</li>
+            <li>Photography</li>
+            <li>Product design</li>
+          </ul>
+          <h4>Tools</h4>
+          <ul>
+            <li>Affinity Designer</li>
+            <li>Affinity Photo</li>
+            <li>Blender</li>
+            <li>Stable Diffusion</li>
+          </ul>
         </div>
       </div>
     </div>
