--- a/pages/case_studies.html
+++ b/pages/case_studies.html
@@ -57,8 +57,8 @@
         </div>
         <div class="column">
           <h3>Garrett Ray Jewellery</h3>
-          <p>Garrett Ray Jewellery is a local family owned business offering fine jewellery. We produced the client branding, product designs, marketing support and web development.</p>
-          <p>The Shopify site build went very smoothly, Shopify's Dawn theme was easily modified to match the brand and we utilised the platforms built-in Git integration to create an auto backup of any site changes to version control.</p>
+          <p>Garrett Ray Jewellery is a local family owned business offering fine jewellery. We produced the client branding, graphic design, product design and renders, marketing support and web development.</p>
+          <p>Built on Shopify with the Dawn theme. We utilised the platforms built-in Git integration to create an automatic backup of any site changes to version control.</p>
           <p>After conducting a competitor analysis comparing key pages in this category, extensive content upgrades were made to the site resulting in higher traffic and better user engagement.</p>
           <h4>
             <a href="https://www.artstation.com/artwork/YBgKgY" target="_blank" title="Garrett Ray Jewellery case study on Artstation">Read more about this on Artstation</a>
@@ -105,12 +105,23 @@
       </div>
       <div class="row">
         <div class="column">
-          <img src="./images/cs5.jpg" style=" width: 100%; height: auto;" />
+          <a href="https://openstudios.artstation.com/projects/DvQA4E" target="_blank" title="Langenium case study on Artstation"></a>
+            <img src="./images/cs5.jpg" style=" width: 100%; height: auto;" />
+          </a>
         </div>
         <div class="column">
           <h3>Langenium MMORPG</h3>
-          <p>Langenium was a concept MMORPG built on socket.io, Three.JS and Node.JS. At its height hundreds of monthly visitors could play in a working arcade style arena. Players could anonymously hop into a flying vehicle and shoot one another or one of the the bots flying around the map.
-          </p>
+          <p>Langenium is an MMORPG concept built on socket.io, Three.JS and Node.JS. Due to the cost of running a server it's currently offline, but we have plans to bring it back!</p>
+          <p>The node.js server allows website visitors to play Langenium just by visiting the URL in their browser. Players could anonymously hop into a flying vehicle and shoot one another or one of the the bots flying around the map.</p>
+          <h4>
+            <a href="https://langenium.com" target="_blank" title="Langenium scene demos">Visit the Langenium scene demos</a>
+          </h4>
+          <h4>
+            <a href="https://langenium.com" target="_blank" title="Langenium scene demos">Watch the Langenium scene demos</a>
+          </h4>
+          <h4>
+            <a href="https://openstudios.artstation.com/projects/DvQA4E" target="_blank" title="Langenium case study on Artstation">Read more about this on Artstation</a>
+          </h4>
         </div>
       </div>
     </div>
