--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -47,7 +47,12 @@
       <div class="row">
         <div class="column">
           <img src="./images/paul.jpg" style=" width: 100%; height: auto;" />
-          <h3>Paul Brzeski</h3>
+          <h3>
+            Paul Brzeski
+            <a class="linkedin_profile" href="https://linkedin.com/in/paul-b-23620b209/" title="Paul Brzeski on LinkedIn">
+              <img src="./images/linkedin.png" />
+            </a>
+          </h3>
           <p>Introducing Paul, a versatile and forward-thinking problem solver with over 15 years in the industry. Beyond the traditional boundaries of coding, Paul has embraced a multifaceted style that seamlessly blends technology and creativity to craft innovative solutions.</p>
           <p>With a natural ability to envision the intersection of art and technology, Paul's journey has been characterized by staying at the forefront of the ever-changing tech landscape and pushing the boundaries of what's possible. He seamlessly adapts to different environments, bringing a perfect blend of technical expertise and creative flair to each project.</p>
           <h4>Skills</h4>
@@ -73,7 +78,12 @@
         </div>
         <div class="column">
           <img src="./images/garrett.png" style=" width: 100%; height: auto;" />
-          <h3>Garrett Kinder</h3>
+          <h3>
+            Garrett Kinder
+            <a class="linkedin_profile" href="https://www.linkedin.com/in/garrett-ray-kinder-361ba6a5/" title="Garrett Kinder on LinkedIn">
+              <img src="./images/linkedin.png" />
+            </a>
+          </h3>
           <p>Meet Garrett, the embodiment of sophistication and innovation, renowned as an award-winning bartender, expert jeweler, and connoisseur of rare whiskies.</p>
           <p>Embracing the digital realm, Garrett shares his passion and expertise as a taste visionary, enriching the online world with his profound knowledge of aesthetics and all things refined.</p>
           <h4>Skills</h4>
