Adding WIP contact page changes, about us tweaks

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -49,7 +49,7 @@
           <img src="./images/paul.jpg" style=" width: 100%; height: auto;" />
           <h3>
             Paul Brzeski
-            <a class="linkedin_profile" href="https://linkedin.com/in/paul-b-23620b209/" title="Paul Brzeski on LinkedIn">
+            <a class="icon_button" href="https://linkedin.com/in/paul-b-23620b209/" title="Paul Brzeski on LinkedIn">
               <img src="./images/linkedin.png" />
             </a>
           </h3>
@@ -57,8 +57,9 @@
           <p>With a natural ability to envision the intersection of art and technology, Paul's journey has been characterized by staying at the forefront of the ever-changing tech landscape and pushing the boundaries of what's possible. He seamlessly adapts to different environments, bringing a perfect blend of technical expertise and creative flair to each project.</p>
           <h4>Skills</h4>
           <ul>
-            <li>3D Modelling and Realtime Programming</li>
-            <li>Character design</li>           
+            <li>3D Production</li>
+            <li>Character design</li>
+            <li>Dashboard systems</li>
             <li>Generative A.I.</li>
             <li>Software development</li>
             <li>Solution architecture</li>
@@ -73,6 +74,7 @@
             <li>Blender</li>
             <li>Linux. Lots of Linux.</li>
             <li>Stable Diffusion</li>
+            <li>Three.JS</li>
             <li>VSCode</li>
           </ul>
         </div>
@@ -80,7 +82,7 @@
           <img src="./images/garrett.png" style=" width: 100%; height: auto;" />
           <h3>
             Garrett Kinder
-            <a class="linkedin_profile" href="https://www.linkedin.com/in/garrett-ray-kinder-361ba6a5/" title="Garrett Kinder on LinkedIn">
+            <a class="icon_button" href="https://www.linkedin.com/in/garrett-ray-kinder-361ba6a5/" title="Garrett Kinder on LinkedIn">
               <img src="./images/linkedin.png" />
             </a>
           </h3>
@@ -94,6 +96,7 @@
             <li>Graphic design</li>
             <li>Photography</li>
             <li>Product design</li>
+            <li>Social media management</li>
           </ul>
           <h4>Tools</h4>
           <ul>
