--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -40,9 +40,10 @@
     <div class="content">
       <div class="row">
         <div class="column">
-          <h3>Get in touch!</h3>
-          <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
-            applications, and digital products.</p>
+          <h3>Say hello</h3>
+          <p>Please email us at <a href="mailto:team@openstudios.xyz">team@openstudios.xyz</a> or alternatively fill out
+            the contact form below and we will endeaver to respond to your enquiry shortly.
+          </p>
           <p>
             <label for="fullname" type="text">Full Name</label><br>
             <input name="fullname" type="text" />
@@ -60,7 +61,49 @@
           </p>
         </div>
         <div class="column">
-          <div style="width: 100%"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d432906.06061080005!2d115.68138423281249!3d-32.04006389999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x83067246234c2221%3A0xf849d5152238a278!2sOpen%20Studios!5e0!3m2!1sen!2sau!4v1689330743016!5m2!1sen!2sau" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <h3>Connect with us</h3>
+          <p>Find us across the web at the following destinations:</p>
+          <h4>Open Studios</h4>
+          <strong>ArtStation:</strong> <a
+            href="https://www.artstation.com/openstudios">openstudios</a><br>
+          <strong>Facebook:</strong> <a
+            href="https://www.facebook.com/openstudiosco">openstudiosco</a><br>
+          <strong>Instagram:</strong> <a
+            href="https://www.instagram.com/openstudiosco/">openstudiosco</a><br>
+          <strong>LinkedIn:</strong> <a
+            href="https://www.linkedin.com/company/open-studios-australia/">Open Studios</a><br>
+          <strong>Medium:</strong> <a href="https://medium.com/@open_studios">@open_studios</a><br>
+          <strong>YouTube:</strong> <a href="https://www.youtube.com/@open-studios">@open-studios</a><br>
+          <h4><span class="icon_button">
+              <img src="./images/garrettray.png" />
+            </span>Garrett Ray Jewellery</h4>
+          <strong>Facebook:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>Instagram:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>LinkedIn:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>Website:</strong> <a href="https://grayjewellery.com.au">https://grayjewellery.com.au</a><br>
+          <h4><span class="icon_button">
+            <img src="./images/kamigen.png" />
+          </span>Kamigen</h4>
+          <strong>Facebook:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>Instagram:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>LinkedIn:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>Website:</strong> <a href="https://grayjewellery.com.au">https://grayjewellery.com.au</a><br>
+          <h4><span class="icon_button">
+            <img src="./images/paulbrzeski.png" />
+          </span>Paul Brzeski</h4>
+          <strong>Facebook:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>Instagram:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>LinkedIn:</strong> <a
+            href="https://www.instagram.com/garrettrayjewellery/">@garrettrayjewellery</a><br>
+          <strong>Website:</strong> <a href="https://grayjewellery.com.au">https://grayjewellery.com.au</a><br>
         </div>
       </div>
     </div>
