--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body>
+<body class="contact_page">
   <div id="page-wrapper">
     <div class="header">
       <div class="lineset first">
