Updating services copy

--- a/pages/services.html
+++ b/pages/services.html
@@ -40,37 +40,26 @@
     <div class="content">
       <div class="row">
         <div class="column">
-          <h3>UI/UX Design and Development</h3>
-          <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
-            applications, and digital products.</p>
-          <h3>Front-end Development</h3>
-          <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
-            and
-            frameworks like Vue.</p>
-          <h3>Interactive Media and Experiences</h3>
-          <p>Offer the creation of interactive media content, immersive experiences, interactive installations, or
-            multimedia presentations for events or marketing campaigns.</p>
-          <h3>Creative Prototyping</h3>
-          <p>Help clients bring their ideas to life by providing prototyping services, creating interactive mock-ups, or
-            developing proof-of-concept solutions.</p>
-          <h3>Web Development and Customization</h3>
-          <p>Offer website development services, including building custom websites, content management systems (CMS), or
-            e-commerce platforms tailored to client specifications.</p>
+          <h3>Eye Catching Human Centric Designs</h3>
+          <p>Crafting intuitive interfaces and seamless user experiences for websites, applications, and digital products. Our design approach ensures that your audience is engaged and delighted at every touchpoint. Step into a world where the creative and technical converge, let our production studio be the catalyst that takes your digital ventures to soaring heights.</p>
+          <h3>Front-End Excellence</h3>
+          <p>Developing responsive and interactive solutions using HTML, CSS, JavaScript, and frameworks like Vue. Embark on a journey of innovation and discovery, where our adept team harnesses their prowess of code to transcend conventional boundaries in web development. Wire up your imagination and embrace the future of digital excellence with our expert team by your side.</p>
+          <h3>Interactive Experiences</h3>
+          <p>Creating immersive content, interactive installations, and multimedia presentations for events and campaigns. Ignite curiosity and fascination with our visionary approach, where the digital and physical worlds merge seamlessly. Step into a realm where creativity and technical finesse converge, transforming ordinary experiences into extraordinary ones.</p>
+          <h3>Innovating Through Prototypes</h3>
+          <p>Bringing ideas to life with interactive mock-ups and proof-of-concept solutions. Unlock the potential of your concepts, and witness your ideas come to life in stunning detail. Experience the fusion of data and design, where information becomes art, and possibilities beyond imagination are unveiled.</p>
+          <h3>Tailored Web Solutions</h3>
+          <p>Building custom websites, content management systems (CMS), and e-commerce platforms. Unlock the potential of your online presence with bespoke website development. We tailor every detail to resonate with your unique vision and goals, creating your digital oasis where innovation meets code.</p>
         </div>
         <div class="column">
-          <h3>Data Visualization</h3>
-          <p>Help clients visualize complex data sets through interactive and visually appealing charts, graphs, and
-            dashboards to facilitate data-driven decision-making.</p>
-          <h3>Emerging Technologies</h3>
-          <p>Stay up-to-date with emerging technologies and offer services related to AI integration, machine learning,
-            blockchain development, Internet of Things (IoT), or wearable technology solutions.</p>
-          <h3>Technical Consulting</h3>
-          <p>Provide technical consulting services, helping clients identify and implement the most effective creative
-            technology solutions for their specific business needs.</p>
-          <h3>Project Management and Coordination</h3>
-          <p>Offer project management services, overseeing the implementation of creative technology projects from start
-            to
-            finish, ensuring smooth execution and timely delivery.</p>
+          <h3>Visualizing Data Insights</h3>
+          <p>Creating visually appealing charts, graphs, and dashboards for informed decision-making. Turn data complexities into visual masterpieces, empowering your decision-making process. Let the creative process unfold, where insights are unveiled in living color, revealing hidden patterns and opportunities.</p>
+          <h3>Embracing Emerging Technologies</h3>
+          <p>Meaningful use of AI, machine learning, IoT, and other new tech. Improve customer satisfaction, efficiency and reduce overheads while at the forefront of innovation with our expertise in emerging technologies. Trust us to be the architects of your success as we shape a future that's boundless and extraordinary.</p>
+          <h3>Technical Consulting Expertise</h3>
+          <p>Guiding clients to implement effective creative technology solutions for their business needs. Rise above challenges with the guidance of our technical consulting services. Embrace innovation with us, and together, we'll shape a future that sets your brand apart.</p>
+          <h3>Project Management and Support</h3>
+          <p>Overseeing seamless execution from start to finish, ensuring timely delivery of creative projects. Let our seasoned project management team take charge, ensuring your vision comes to life on time and within budget. Step into a world where dreams take shape, and success becomes the new reality.</p>
         </div>
       </div>
     </div>
