Moving static pages out of their subfolder and tidying

--- a/case_studies.html
+++ b/case_studies.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Case studies - Open Studios</title>
-  <link href="./1999.css" rel="stylesheet" />
+  <link href="./assets/1999.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <hr class="line">
       </div>
       <div class="h1">
-        <a href="#" title="Home"><img src="./images/logo-wide.png" alt="Logo"></a>
+        <a href="#" title="Home"><img src="./assets/images/logo-wide.png" alt="Logo"></a>
       </div>
       <div class="lineset second">
         <hr class="line">
@@ -40,7 +40,7 @@
     <div class="content">
       <div class="row">
         <div class="column">
-          <img src="./images/cs1.jpg" style=" width: 100%; height: auto;" />
+          <img src="./assets/images/cs1.jpg" style=" width: 100%; height: auto;" />
         </div>
         <div class="column">
           <h3>This website</h3>
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="column">
           <a href="https://www.artstation.com/artwork/YBgKgY" target="_blank" title="Garrett Ray Jewellery case study on Artstation">
-            <img src="./images/cs2.jpg" style=" width: 100%; height: auto;" />
+            <img src="./assets/images/cs2.jpg" style=" width: 100%; height: auto;" />
           </a>
         </div>
         <div class="column">
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="column">
           <a href="https://www.artstation.com/artwork/5vPBxP" target="_blank" title="Kamigen Aircraft Combat game case study on Artstation">
-            <img src="./images/cs3.jpg" style=" width: 100%; height: auto;" />
+            <img src="./assets/images/cs3.jpg" style=" width: 100%; height: auto;" />
           </a>
         </div>
         <div class="column">
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="column">
           <a href="https://openstudios.artstation.com/projects/DvQA60" target="_blank" title="Kamigen comics and website case study on Artstation">
-            <img src="./images/cs4.jpg" style=" width: 100%; height: auto;" />
+            <img src="./assets/images/cs4.jpg" style=" width: 100%; height: auto;" />
           </a>
         </div>
         <div class="column">
@@ -106,7 +106,7 @@
       <div class="row">
         <div class="column">
           <a href="https://openstudios.artstation.com/projects/DvQA4E" target="_blank" title="Langenium case study on Artstation"></a>
-            <img src="./images/cs5.jpg" style=" width: 100%; height: auto;" />
+            <img src="./assets/images/cs5.jpg" style=" width: 100%; height: auto;" />
           </a>
         </div>
         <div class="column">
