--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Portfolio - Open Studios</title>
-  <link href="./1999.css" rel="stylesheet" />
+  <link href="./assets/1999.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <hr class="line">
       </div>
       <div class="h1">
-        <a href="#" title="Home"><img src="./images/logo-wide.png" alt="Logo"></a>
+        <a href="#" title="Home"><img src="./assets/images/logo-wide.png" alt="Logo"></a>
       </div>
       <div class="lineset second">
         <hr class="line">
@@ -40,26 +40,26 @@
     <div class="content">
       <div class="row">
         <div class="column">
-          <img src="./images/p1.jpg" style=" width: 100%; height: auto;" />
+          <img src="./assets/images/p1.jpg" style=" width: 100%; height: auto;" />
         </div>
         <div class="column">
-          <img src="./images/p2.jpg" style=" width: 100%; height: auto;" />
-        </div>
-      </div>
-      <div class="row">
-        <div class="column">
-          <img src="./images/p3.jpg" style=" width: 100%; height: auto;" />
-        </div>
-        <div class="column">
-          <img src="./images/p4.jpg" style=" width: 100%; height: auto;" />
+          <img src="./assets/images/p2.jpg" style=" width: 100%; height: auto;" />
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <img src="./images/p6.jpg" style=" width: 100%; height: auto;" />
+          <img src="./assets/images/p3.jpg" style=" width: 100%; height: auto;" />
         </div>
         <div class="column">
-          <img src="./images/p5.jpg" style=" width: 100%; height: auto;" />
+          <img src="./assets/images/p4.jpg" style=" width: 100%; height: auto;" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <img src="./assets/images/p6.jpg" style=" width: 100%; height: auto;" />
+        </div>
+        <div class="column">
+          <img src="./assets/images/p5.jpg" style=" width: 100%; height: auto;" />
         </div>
       </div>
     </div>
