--- a/about_us.html
+++ b/about_us.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>About us - Open Studios</title>
-  <link href="./1999.css" rel="stylesheet" />
+  <link href="./assets/1999.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <hr class="line">
       </div>
       <div class="h1">
-        <a href="#" title="Home"><img src="./images/logo-wide.png" alt="Logo"></a>
+        <a href="#" title="Home"><img src="./assets/images/logo-wide.png" alt="Logo"></a>
       </div>
       <div class="lineset second">
         <hr class="line">
@@ -46,11 +46,11 @@
       </div>
       <div class="row">
         <div class="column">
-          <img src="./images/paul.jpg" style=" width: 100%; height: auto;" />
+          <img src="./assets/images/paul.jpg" style=" width: 100%; height: auto;" />
           <h3>
             Paul Brzeski
             <a class="icon_button" href="https://linkedin.com/in/paul-b-23620b209/" title="Paul Brzeski on LinkedIn">
-              <img src="./images/linkedin.png" />
+              <img src="./assets/images/linkedin.png" />
             </a>
           </h3>
           <p>Introducing Paul, a versatile and forward-thinking problem solver with over 15 years in the industry. Beyond the traditional boundaries of coding, Paul has embraced a multifaceted style that seamlessly blends technology and creativity to craft innovative solutions.</p>
@@ -79,11 +79,11 @@
           </ul>
         </div>
         <div class="column">
-          <img src="./images/garrett.png" style=" width: 100%; height: auto;" />
+          <img src="./assets/images/garrett.png" style=" width: 100%; height: auto;" />
           <h3>
             Garrett Kinder
             <a class="icon_button" href="https://www.linkedin.com/in/garrett-ray-kinder-361ba6a5/" title="Garrett Kinder on LinkedIn">
-              <img src="./images/linkedin.png" />
+              <img src="./assets/images/linkedin.png" />
             </a>
           </h3>
           <p>Meet Garrett, the embodiment of sophistication and innovation, renowned as an award-winning bartender, expert jeweler, and connoisseur of rare whiskies.</p>
