--- a/contact_us.html
+++ b/contact_us.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Contact us - Open Studios</title>
-  <link href="./1999.css" rel="stylesheet" />
+  <link href="./assets/1999.css" rel="stylesheet" />
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 
 </head>
@@ -18,7 +18,7 @@
         <hr class="line">
       </div>
       <div class="h1">
-        <a href="#" title="Home"><img src="./images/logo-wide.png" alt="Logo"></a>
+        <a href="#" title="Home"><img src="./assets/images/logo-wide.png" alt="Logo"></a>
       </div>
       <div class="lineset second">
         <hr class="line">
@@ -75,7 +75,7 @@
         
         
           <h4 class="icon_button">
-            <img src="./images/garrettray.png" />
+            <img src="./assets/images/garrettray.png" />
             <div>
               Garrett Ray Jewellery
             </div>
@@ -90,7 +90,7 @@
           <br>
 
           <h4 class="icon_button">
-            <img src="./images/kamigen.png" />
+            <img src="./assets/images/kamigen.png" />
             <div>
               Kamigen
             </div>
@@ -104,7 +104,7 @@
           <br>
 
           <h4 class="icon_button">
-            <img src="./images/paulbrzeski.png" />
+            <img src="./assets/images/paulbrzeski.png" />
             <div>
               Paul Brzeski
             </div>
