--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Open Studios</title>
-  <link href="./1999.css" rel="stylesheet" />
+  <link href="./assets/1999.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
           <hr class="line">
         </div>
         <div class="h1">
-          <a href="#" title="Home"><img src="./images/logo-wide.png" alt="Logo"></a>
+          <a href="#" title="Home"><img src="./assets/images/logo-wide.png" alt="Logo"></a>
         </div>
         <div class="lineset second">
           <hr class="line">
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="column">
             <div class="column">
-              <img src="./images/cs1xl.jpg" style=" width: 100%; height: auto;" />
+              <img src="./assets/images/cs1xl.jpg" style=" width: 100%; height: auto;" />
             </div>
             <div class="column">
               <h3>This website</h3>
@@ -51,10 +51,10 @@
           </div>
           <div class="column">
             <h3 style="margin-top: 0">Our work</h3>
-            <img src="./images/p1.jpg" style="margin: 2%; width: 45%; height: auto;" />
-            <img src="./images/p2.jpg" style="margin: 2%; width: 45%; height: auto;" />
-            <img src="./images/p3.jpg" style="margin: 2%; width: 45%; height: auto;" />
-            <img src="./images/p4.jpg" style="margin: 2%; width: 45%; height: auto;" />
+            <img src="./assets/images/p1.jpg" style="margin: 2%; width: 45%; height: auto;" />
+            <img src="./assets/images/p2.jpg" style="margin: 2%; width: 45%; height: auto;" />
+            <img src="./assets/images/p3.jpg" style="margin: 2%; width: 45%; height: auto;" />
+            <img src="./assets/images/p4.jpg" style="margin: 2%; width: 45%; height: auto;" />
             <a href="#" style="float: right">View portfolio</a>
           </div>
         </div>
