--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Services - Open Studios</title>
-  <link href="./1999.css" rel="stylesheet" />
+  <link href="./assets/1999.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <hr class="line">
       </div>
       <div class="h1">
-        <a href="#" title="Home"><img src="./images/logo-wide.png" alt="Logo"></a>
+        <a href="#" title="Home"><img src="./assets/images/logo-wide.png" alt="Logo"></a>
       </div>
       <div class="lineset second">
         <hr class="line">
