Adding strategic delays, font size tweaks

--- a/web/index.html
+++ b/web/index.html
@@ -138,8 +138,10 @@ function _init() {
 		}
 	];
 
-	_load_modules( modules, "s" );
-
+	setTimeout( () => {
+		_load_modules( modules, "s" );
+	} , 1000);
+	
 }
 
 // Checks URL and determines environment.
@@ -312,7 +314,8 @@ const canvas = document.getElementById('loader_symbols');
 canvas.style.mixBlendMode = "exclusion";
 const ctx = canvas.getContext('2d');
 
-const fontSize = 20;
+const largeScreen = canvas.width * canvas.height < 2000000;
+const fontSize = largeScreen ? 15 : 8;
 
 const canvas2 = document.getElementById('loader_image');
 canvas2.style.display = 'none';
@@ -358,7 +361,7 @@ window.matrix_scene = {
         window.matrix_scene.lastTime = currentTime;
         drawBackground();
 
-        ctx.font = '15pt monospace';
+        ctx.font = fontSize + 'pt monospace';
 
         if ( window.matrix_scene.stage == 0 ) {
             ctx.fillStyle = '#0001';
@@ -369,7 +372,7 @@ window.matrix_scene = {
 
                 window.matrix_scene.drawSymbol(y, ind);
 
-                if ( canvas.width * canvas.height < 2000000 ) {
+                if ( largeScreen ) {
                     window.matrix_scene.elapsed += Math.PI * 10;
                 }
                 else {
@@ -431,7 +434,7 @@ window.matrix_scene = {
     },
     drawSymbol: function( y, ind ) {
         const text = charArr[randomInt(0, charArr.length - 1)].toUpperCase();
-        const x = ind * 20;
+        const x = ind * (largeScreen ? 20 : 10);
 
         ctx.fillStyle = getAverageColor(ctx2, x, y);
         ctx.fillText(text, x, y);
@@ -454,6 +457,7 @@ window.matrix_scene = {
                     pageWrapper.style.transition = 'opacity 1s';
                     pageWrapper.style.opacity = 0;
                 }
+                
             }
         }
         if ( window.matrix_scene.stage == 1 ) {
@@ -483,7 +487,7 @@ window.matrix_scene = {
                 canvas.style.transform = "scale(5)";
                 canvas.style.filter = "blur(5px)";
 
-                webgl.style.transition = 'filter 3s 2s, opacity 5s';
+                webgl.style.transition = 'filter 3s 2s, opacity 2s';
                 webgl.style.filter = "saturate(1)";
                 webgl.style.opacity = 1;
             }
@@ -495,7 +499,6 @@ window.matrix_scene = {
                 window.matrix_scene.transition_elapsed += 100;
             }
             else {
-                canvas.style.display = 'none';
                 clearInterval(window.matrix_scene.interval);
                 window.matrix_scene.complete = true;
             }
