--- a/web/about_us.html
+++ b/web/about_us.html
@@ -90,6 +90,7 @@ body {
 #pokematrixSign {
     opacity: 0;
     cursor: pointer;
+    z-index: 10003;
 }
 #exitSign {
     display: none;
@@ -503,7 +504,6 @@ window.matrix_scene = {
                 (Date.now() - window.matrix_scene.stageStarted) > window.matrix_scene.transition_total
             ) {
                 clearInterval(window.matrix_scene.interval);
-                window.matrix_scene.complete = true;
                 canvas.style.display = 'none';
                 exitButton.addEventListener( 'click', downTheRabbitHole);
             }
@@ -533,6 +533,7 @@ function downTheRabbitHole() {
 
     // Hide the pageWrapper on completion so the iframed pages don't clash.
     setTimeout( () => {
+        window.matrix_scene.complete = true;
         pageWrapper.style.display = 'none';
 
         // Animate the camera resetting from any other position.
