--- a/web/contact_us.html
+++ b/web/contact_us.html
@@ -561,14 +561,19 @@ function downTheRabbitHole() {
 
 // Function to draw the background image
 function drawBackground() {
-    var scale = 0.8;
+    var scale = isDesktop ? 1 : 0.8;
 
     var scaledWidth =  canvas.width * scale;
     var scaledHeight =  canvas.height * scale;
 
     // Calculate the top-left coordinates of the image to center it
-    var imageX =( (w - scaledWidth) / 2) + ( 0.1 ) * canvas.width;
-    var imageY = (2.5 + (h - scaledHeight) / 2) - ( 0.1 ) * canvas.height;
+    var imageX =  (w - scaledWidth) / 2;
+    var imageY = 2.5 + (h - scaledHeight) / 2;
+
+    if (!isDesktop) {
+        imageX += ( 0.1 ) * canvas.width;
+        imageY -= ( 0.1 ) * canvas.height;
+    }
 
     // Draw the image on the canvas at the calculated position
     ctx2.drawImage(backgroundImage, imageX, imageY, scaledWidth, scaledHeight);
