--- a/web/index.html
+++ b/web/index.html
@@ -625,4 +625,14 @@ function handleViewportChange() {
     ctx.fillStyle = '#000';
     ctx.fillRect(0, 0, w, h);
 }
-</script></div></body></html>
+</script><script>var _paq = window._paq = window._paq || [];
+/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+_paq.push(['trackPageView']);
+_paq.push(['enableLinkTracking']);
+(function() {
+var u="https://analytics.openstudios.xyz/";
+_paq.push(['setTrackerUrl', u+'matomo.php']);
+_paq.push(['setSiteId', '11']);
+var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+})();</script></div></body></html>
